<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/bottomSheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:orientation="vertical"
    android:background="@drawable/background_round">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_record"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextLayoutStyle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fileNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="80dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/cancel"
            android:backgroundTint="@color/gray"
            android:textColor="@color/grayDark"
            app:cornerRadius="26dp"
            app:rippleColor="@color/grayDark"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOkay"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/okay"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/strokeColor"
            android:textColor="@color/white"
            app:cornerRadius="26dp"
            app:rippleColor="@color/grayDark"/>
    </LinearLayout>
</LinearLayout>