<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioPlayerActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title=" ">
<TextView
    android:id="@+id/tvTitleFileName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:gravity="center"
    android:layout_marginEnd="46dp"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.chip.Chip
        android:id="@+id/chipSpeed"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:text="@string/x_1_0"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:progress="40"
        android:progressTint="@color/playerColor"
        android:thumbTint="@color/playerColor"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/tvTrackProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:00"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />
    <TextView
        android:id="@+id/tvTrackDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0:00"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <ImageButton
            android:id="@+id/btnBackwardPlayer"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_replay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnPlayPlayer"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/backward_5_second" />

        <ImageButton
            android:id="@+id/btnPlayPlayer"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_play_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/play_button" />

        <ImageButton
            android:id="@+id/btnForwardPlayer"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnPlayPlayer"
            android:contentDescription="@string/forward_5_second" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>