<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GalleryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout

            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/galleryToolBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:title="Recordings" />

            <RelativeLayout
                android:id="@+id/editBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:visibility="gone"
                android:padding="8dp">

                <ImageButton
                    android:id="@+id/btnClose"
                    android:src="@drawable/ic_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/close_edit_mode" />

                <ImageButton
                    android:id="@+id/btnSelectAll"
                    android:src="@drawable/ic_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/select_all_items"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/SearchInputStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_audio_record"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:textColorHint="@color/grayDark" />

        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>